fix field wrapping

--- a/markup/_dist/assets/css/style.css
+++ b/markup/_dist/assets/css/style.css
@@ -11050,7 +11050,7 @@ p {
 .nl-team-field {
   background: url(../img/nl-soccer-field.png) no-repeat 0 0;
   background-size: contain;
-  min-width: 620px;
+  min-width: 100%;
   min-height: 563px;
   background-size: 100% 100%; }
   .nl-team-field.football {
