--- a/markup/_scss/sections/_nl-create-team.scss
+++ b/markup/_scss/sections/_nl-create-team.scss
@@ -135,7 +135,7 @@
 .nl-team-field {
   background: url(../img/nl-soccer-field.png) no-repeat 0 0;
   background-size: contain;
-  min-width: 620px;
+  min-width: 100%;
   min-height: 563px;
   background-size: 100% 100%;
 
